--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "chart.js": "^4.4.8",
-    "next": "15.2.0",
+    "formidable": "^3.5.2",
+    "mysql2": "^3.14.0",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sweetalert2": "^11.6.13",
+    "xlsx": "^0.18.5"
   }
 }
