--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.4.8",
     "formidable": "^3.5.2",
+    "js-cookie": "^3.0.5",
     "mysql2": "^3.14.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
